test/services/spark-reverse-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: spark-reverse-proxy
                port:
                  number: 8000
            path: /
            pathType: Prefix
