test/services/spark-reverse-proxy/kustomization.yaml
resources:
  - deployment.yaml
  - spark-sa.yaml
  - reverse-proxy-sa.yaml
  - ingress.yaml
