test/services/spark-reverse-proxy/reverse-proxy-sa.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: reverse-proxy-sa
  labels:
    k8s-apps: spark
automountServiceAccountToken: true

---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: can-list-pods
rules:
  - apiGroups: ["", "apps"]
    resources: ["pods", "pods/log", "services"]
    verbs: ["get", "list"]

---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: can-list-pods--to--reverse-proxy-sa
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: can-list-pods
subjects:
  - kind: ServiceAccount
    name: reverse-proxy-sa
