test/services/spark-reverse-proxy/spark-sa.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: spark-sa
  labels:
    k8s-apps: spark
automountServiceAccountToken: true

---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: can-create-spark-driver
rules:
  - apiGroups: ["", "apps"]
    resources: ["pods", "services", "deployments", "statefulsets", "configmaps", "secrets"]
    verbs: ["get", "watch", "list", "create", "delete", "update", "patch"]

---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: can-create-spark-driver--to--spark-sa
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: can-create-spark-driver
subjects:
  - kind: ServiceAccount
    name: spark-sa
